--- a/portfolio.html
+++ b/portfolio.html
@@ -51,12 +51,22 @@
                     <ul class="set-card">
                         <li>
                             <figure>
-                                <img
-                                    src="images/technocrack.jpg"
-                                    alt="strona internetowa"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="">
+                                    <img
+                                        src="images/technocrack.jpg"
+                                        alt="strona internetowa"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Technocrack</h3>
                                     <span>Strona internetowa</span>
