--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         ><span class="text-blue">Web</span>Studio</a
                     >
                     <ul class="site-navigation">
-                        <li><a href="#">Agencja</a></li>
+                        <li><a class="underline" href="#">Agencja</a></li>
                         <li>
                             <a href="./portfolio.html">Portfolio</a>
                         </li>
@@ -137,36 +137,42 @@
                     <h2>Czym sie zajmujemy</h2>
                     <ul class="item-grid-wrapper">
                         <li>
-                            <div class="">
+                            <div class="grid-position">
                                 <img
                                     src="images/programming.jpg"
                                     alt="Programista pracujacy przy swoim biurku"
                                     width="370"
                                     height="294"
                                 />
-                                <p class="">APLIKACJE KOMPUTEROWE</p>
+                                <p class="grid-position-text">
+                                    APLIKACJE KOMPUTEROWE
+                                </p>
                             </div>
                         </li>
                         <li>
-                            <div class="">
+                            <div class="grid-position">
                                 <img
                                     src="images/applications.jpg"
                                     alt="Programista tworzy design aplikacji"
                                     width="370"
                                     height="294"
                                 />
-                                <p class="">APLIKACJE MOBILNE</p>
+                                <p class="grid-position-text">
+                                    APLIKACJE MOBILNE
+                                </p>
                             </div>
                         </li>
                         <li>
-                            <div class="">
+                            <div class="grid-position">
                                 <img
                                     src="images/design.jpg"
                                     alt="Programista wybiera barwe kolorystyczna do design"
                                     width="370"
                                     height="294"
                                 />
-                                <p class="">ROZWIĄZANIA GRAFICZNE</p>
+                                <p class="grid-position-text">
+                                    ROZWIĄZANIA GRAFICZNE
+                                </p>
                             </div>
                         </li>
                     </ul>
