--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,15 @@
         <header class="header-border">
             <div class="container main-header">
                 <nav class="main-nav">
-                    <a class="main-logo" href="index.html"
+                    <a class="main-logo" href="#"
                         ><span class="text-blue">Web</span>Studio</a
                     >
                     <ul class="site-navigation">
-                        <li><a href="#">Agencja</a></li>
+                        <li><a href="index.html">Agencja</a></li>
                         <li>
-                            <a href="./portfolio.html">Portfolio</a>
+                            <a class="underline" href="./portfolio.html"
+                                >Portfolio</a
+                            >
                         </li>
                         <li><a href="#">Kontakt</a></li>
                     </ul>
@@ -51,14 +53,14 @@
                     <ul class="set-card">
                         <li>
                             <figure>
-                                <div class="">
+                                <div class="card-move">
                                     <img
                                         src="images/technocrack.jpg"
                                         alt="strona internetowa"
                                         width="370"
                                         height="294"
                                     />
-                                    <p class="">
+                                    <p class="text-card-move">
                                         Technocrack jest popularną platformą
                                         wykorzystywaną do rozpowszechniania
                                         koronawirusa. Firmy wykorzystują tę
