--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/neworlean.jpg"
-                                    alt="dwoch koszykarzy"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/neworlean.jpg"
+                                        alt="dwoch koszykarzy"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Grafika New Orlean vs Golden Star</h3>
                                     <span>Dizajn</span>
@@ -91,12 +101,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/seafood.jpg"
-                                    alt="logo restauracji Seafood"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/seafood.jpg"
+                                        alt="logo restauracji Seafood"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Restauracja Seafood</h3>
                                     <span>Aplikacja</span>
@@ -105,12 +125,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/projectprime.jpg"
-                                    alt="sluchawki na uszy"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/projectprime.jpg"
+                                        alt="sluchawki na uszy"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Projekt Prime</h3>
                                     <span>Marketing</span>
@@ -119,12 +149,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/boxes.jpg"
-                                    alt="dwa kartony"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/boxes.jpg"
+                                        alt="dwa kartony"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Projekt Boxes</h3>
                                     <span>Aplikacja</span>
@@ -133,12 +173,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/borders.jpg"
-                                    alt="monitor komputera"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/borders.jpg"
+                                        alt="monitor komputera"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Inspiration has no Borders</h3>
                                     <span>Strona internetowa</span>
@@ -147,12 +197,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/magazine.jpg"
-                                    alt="otwarta gazeta z obrazkami"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/magazine.jpg"
+                                        alt="otwarta gazeta z obrazkami"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Magazyn Limited Edition</h3>
                                     <span>Dizajn</span>
@@ -161,12 +221,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/lab.jpg"
-                                    alt="wyciety fragment przywieszki"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/lab.jpg"
+                                        alt="wyciety fragment przywieszki"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Projekt LAB</h3>
                                     <span>Marketing</span>
@@ -175,12 +245,22 @@
                         </li>
                         <li>
                             <figure>
-                                <img
-                                    src="images/growing.jpg"
-                                    alt="otwarta na laptopie aplikacja Growing Business"
-                                    width="370"
-                                    height="294"
-                                />
+                                <div class="card-move">
+                                    <img
+                                        src="images/growing.jpg"
+                                        alt="otwarta na laptopie aplikacja Growing Business"
+                                        width="370"
+                                        height="294"
+                                    />
+                                    <p class="text-card-move">
+                                        Technocrack jest popularną platformą
+                                        wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę do celów szpiegowskich i
+                                        ataków na niezabezpieczone serwery
+                                        konkurencji
+                                    </p>
+                                </div>
                                 <figcaption>
                                     <h3>Growing Business</h3>
                                     <span>Aplikacja</span>
@@ -192,30 +272,85 @@
             </section>
         </main>
         <footer class="footer-wrapper">
-            <section class="section-footer container">
-                <a class="footer-logo" href="#"
-                    ><span class="text-web">Web</span><span>Studio</span></a
-                >
-                <address class="address-items">
-                    <ul>
+            <div class="section-footer container">
+                <div>
+                    <a class="footer-logo" href="#"
+                        ><span class="text-web">Web</span><span>Studio</span></a
+                    >
+                    <address class="address-items">
+                        <ul>
+                            <li>
+                                <span>m. Warszawa, Aleje Jerozolimskie 21</span>
+                            </li>
+                            <li>
+                                <a href="mailto:info@example.com"
+                                    >info@example.com</a
+                                >
+                            </li>
+                            <li>
+                                <a href="tel:+48111111111">+48 111 111 111</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div>
+                    <h3 class="contact">DOLACZ DO NAS</h3>
+                    <ul class="social-media-wrapper">
                         <li>
-                            <span>m. Warszawa, Aleje Jerozolimskie 21</span>
+                            <a href="#"
+                                ><svg
+                                    class="social-media"
+                                    width="20"
+                                    height="20"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-insta"
+                                    ></use>
+                                </svg>
+                            </a>
                         </li>
                         <li>
-                            <a
-                                class="address-decoration"
-                                href="mailto:info@example.com"
-                                >info@example.com</a
-                            >
+                            <a href="#"
+                                ><svg
+                                    class="social-media"
+                                    width="20"
+                                    height="20"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-twitter"
+                                    ></use>
+                                </svg>
+                            </a>
                         </li>
                         <li>
-                            <a class="tel-decoration" href="tel:+48111111111"
-                                >+48 111 111 111</a
-                            >
+                            <a href="#"
+                                ><svg
+                                    class="social-media"
+                                    width="20"
+                                    height="20"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-facebook"
+                                    ></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><svg
+                                    class="social-media"
+                                    width="20"
+                                    height="20"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-in"
+                                    ></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-            </section>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
